Add secret recipe entry to recipe file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 
 <body>
+    <h1>Odin Recipes</h1>
+
+    <p>These are recipes my friends and I have tried over the years with varying degrees of quality</p>
+
+    <h2><a href = ./recipes/gas-station-pizza.html>Gas Station Pizza</a> </h2>
     
 </body>
 </html>
