--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
     <h2><a href = ./recipes/gas-station-pizza.html>Gas Station Pizza</a> </h2>
     
+    <h2><a href = ./recipes/fajitas.html>Fajitas</a></h2>
+    
 </body>
 </html>
