Add addtional description to fajita.html

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -21,11 +21,27 @@
         <li>Salt</li>
         <li>Pepper</li>
         <li>Fresh Tortillas</li>
-        <li>Any topings you think you may want on your fajita</li>
+        <li>Shredded Cheddar</li>
+        <li>Lettuce</li>
+        <li>tomatos</li>
+        <li>guacomole</li>
     </ul>
 
+    <p>
+        After you've gathered your ingredients here are the steps to prepare and cook the food
+
+    </p>
     <ol>
-        <li>cook the food</li>
+        <li>Cut your peppers and tomatos into strips</li>
+        <ul>
+            <li>
+                optional cut your thin steaks into strips
+            </li>
+        </ul>
+        <li>Combine salt pepper garlic powder and any other seasoning you have into olive oil</li>
+        <li>Dip thin steaks in the solution you have created</li>
+        <li>leave on grill for 15-20 minutes or until thoroughly cooked</li>
+        <li>Remove from grill and serve with tortillas and toppings</li>
     </ol>
 </body>
 </html>
