--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <h2><a href = ./recipes/gas-station-pizza.html>Gas Station Pizza</a> </h2>
     
     <h2><a href = ./recipes/fajitas.html>Fajitas</a></h2>
+
+    <h2><a href = ./recipes/humus-burgers.html>Humus Burgers</a></h2>
     
 </body>
 </html>
