change name of humus-burgers.html and correct punctuation

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -12,6 +12,7 @@
     <p>These are the fajitas we usually make on these trips. We like to grill our fajitas so if you have one available that's a plus.
         Here are the ingredients and steps
     </p>
+    <h2>Ingredients</h2>
     <ul>
         <li>Thin steaks</li>
         <li>Bell peppers</li>
@@ -31,6 +32,7 @@
         After you've gathered your ingredients here are the steps to prepare and cook the food
 
     </p>
+    <h2>Steps</h2>
     <ol>
         <li>Cut your peppers and tomatos into strips</li>
         <ul>
