--- a/recipes/hummus-burgers.html
+++ b/recipes/hummus-burgers.html
@@ -42,6 +42,7 @@
         <li>Probably some good hard cider (I like the cinnamon angry orchard)</li>
     </ul>
 
+    <h2>Steps</h2>
     <ol>
         <li>
             Combine your patty seasoning in the olive oil
