fix hummus burger link in index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
     <h2><a href = ./recipes/fajitas.html>Fajitas</a></h2>
 
-    <h2><a href = ./recipes/humus-burgers.html>Humus Burgers</a></h2>
+    <h2><a href = ./recipes/hummus-burgers.html>Humus Burgers</a></h2>
     
 </body>
 </html>
