added coconut cake, removed gas station pizza

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "./css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +12,12 @@
     <h1>Odin Recipes</h1>
 
     <p>These are recipes my friends and I have tried over the years with varying degrees of quality</p>
-
-    <h2><a href = ./recipes/gas-station-pizza.html>Gas Station Pizza</a> </h2>
     
     <h2><a href = ./recipes/fajitas.html>Fajitas</a></h2>
 
     <h2><a href = ./recipes/hummus-burgers.html>Humus Burgers</a></h2>
+
+    <h2><a href = ./recipes/coconut-cake.html>Coconut Cake</a></h2>
     
 </body>
 </html>
