--- a/recipes/gas-station-pizza.html
+++ b/recipes/gas-station-pizza.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href = "../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
 </head>
 <body>
     <h1>Gas Station Pizza</h1>
-<img src="../img/gas-station-pizza.jpg" alt="Gas station pizza picture :)">
+<img src="../img/gas-station-pizza.jpg" alt="Gas station pizza picture :)" class = "pizza-img">
 
 <p>
     This is a pizza my friends and I made at the end of one of our annual trips with some leftover food. <strong>It should not be made by anyone.</strong> If you want
