add images, alter CSS for UL/OL, add text to coconut cake

--- a/recipes/fajitas.html
+++ b/recipes/fajitas.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <h1>Fajitas</h1>
-    <img src="../img/fajitas.jpg" alt="Fajitas">
+    <div>
+    <img src="../img/fajitas.jpg" alt="Fajitas" class = "fajita-img">
+    </div>
     <p>These are the fajitas we usually make on these trips. We like to grill our fajitas so if you have one available that's a plus.
         Here are the ingredients and steps
     </p>
@@ -36,11 +38,6 @@
     <h2>Steps</h2>
     <ol>
         <li>Cut your peppers and tomatos into strips</li>
-        <ul>
-            <li>
-                optional cut your thin steaks into strips
-            </li>
-        </ul>
         <li>Combine salt pepper garlic powder and any other seasoning you have into olive oil</li>
         <li>Dip thin steaks in the solution you have created</li>
         <li>leave on grill for 15-20 minutes or until thoroughly cooked</li>
