--- a/recipes/hummus-burgers.html
+++ b/recipes/hummus-burgers.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>Hummus Burgers</h1>
-
+    <div>
     <img src = "../img/hummus-burger.jpg" alt = "Hamburger">
-
+    </div>
     <p>This is a recipe for a pretty solid hamburger that I like to add hummus to. It's pretty good without it if you just want a good burger though.</p>
 
     <h2>Ingredients</h2>
